<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DerpTeam</string>
    <string name="app_id">1417999875114121</string>
    <string name="action_settings">Settings</string>
    <string name="action_fb_share">Share</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_report_bug">Report Bug</string>
    <string name="no_internet">No Internet Access</string>
    <string name="logo">Logo</string>
    <string name="no_friends">No Friends</string>
    <string name="enter_caption">enter funny caption</string>
    <string name="enter_title">enter title - ie. captain, brother, etc</string>
    <string name="starting_camera">Starting Camera</string>
    <string name="btn_assign_team">Assign To Team</string>
    <string name="desc_fb_picture">Facebook Picture</string>
    <string name="desc_derp_picture">Derp Picture</string>
    <string name="desc_taken_picture">Taken Picture</string>
    <string name="desc_rate_image">Image To Rate</string>
    <string name="desc_take_picture">Take Picture Button</string>
    <string name="desc_show_gallery">Show Gallery Button</string>
    <string name="desc_vote_up">Vote Up Button</string>
    <string name="desc_vote_down">Vote Down Button</string>
    <string name="desc_next_picture">Next Picture Button</string>
    <string name="desc_comment_icon">Comments</string>
    <string name="dialog_no_picture">No picture to assign to team. Find something funny and take one!</string>
    <string name="dialog_go_back">Going back will lose the current picture. Are you sure you want to go back?</string>
    <string name="dialog_send_to_server">Derping your friend. Please wait.</string>
    <string name="dialog_loading_fb_info">Loading Facebook info. Please wait.</string>
    <string name="dialog_new_or_gallery">Select from gallery or take new picture?</string>
    <string name="dialog_exit">Are you sure you want to exit?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_new_picture">Take Picture</string>
    <string name="dialog_from_gallery">From Gallery</string>
    <string name="assign_team">Assign Team</string>
    <string name="view_team">View Team</string>
    <string name="derp_assigned">Derp assigned!</string>
    <string name="comments">Comments</string>
    <string name="possessive_form">\'s</string>
    <string name="team">Team</string>
    <string name="derped_by">Derped By:</string>
    <string name="title_empty">Please fill in a title</string>
    <string name="add_comment">Add Comment</string>
    <string name="finished">Finished</string>
    <string name="empty_comment">Comment is empty</string>
    <string name="comment_added">Comment Added</string>
    <string name="loading">Loading</string>
    <string name="posted_to_wall">Posted to friend\'s wall</string>
    <string name="posted_to_wall_error">Error posting to friend\'s wall</string>
    <string name="report_bug">Report Bug</string>
    <string name="report">Report</string>
    <string name="bug_report_sent">Bug report sent. Thank you for your input!</string>
	<string name="top_five_derps">Top 5 Derps</string>
    
</resources>
