<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_show_leaderboard"
        android:title="@string/action_show_leaderboard"
        android:icon="@drawable/btn_leaderboard"
        android:showAsAction="always"
        android:orderInCategory="1" />

    <item
        android:id="@+id/action_report_bug"
        android:title="@string/action_report_bug"
        android:icon="@drawable/btn_report_bug"
        android:showAsAction="never"
        android:orderInCategory="2" />
    
    <item
        android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        android:showAsAction="never"
        android:orderInCategory="3" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" 
        android:orderInCategory="4" />
    
</menu>
