<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff" >
    
    <ImageView 
        android:id="@+id/taken_picture"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="fitXY"
        android:src="@drawable/image_placeholder"
        android:contentDescription="@string/desc_taken_picture" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="#30acff" >
        
        <EditText
			android:id="@+id/caption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="10dp"
			android:background="@drawable/edit_text_box"
			android:hint="@string/enter_caption"
			android:maxLength="30"
			android:singleLine="true" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_assign_team"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/btn_assign_team" />

</LinearLayout>
