<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#fff" >
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/derpteam_logo"
        android:contentDescription="@string/logo" />
    
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true" >
        
        <ImageView 
	        android:id="@+id/rate_image"
	        android:layout_width="320dp"
	        android:layout_height="320dp"
	        android:scaleType="fitXY"
	        android:src="@drawable/sample"
	        android:background="@drawable/image_border"
	        android:contentDescription="@string/desc_rate_image" />
        
        <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_gravity="bottom"
        	android:paddingTop="4dp"
        	android:paddingBottom="4dp"
        	android:layout_marginBottom="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:orientation="horizontal"
        	android:background="@drawable/transparent_gradient" >
        	
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/arrow_down" />
            
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/arrow_up" />
        	
		</LinearLayout>
        
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >
        
        <ImageButton
            android:id="@+id/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/camera_icon"
            android:contentDescription="@string/desc_take_picture" />
        
        <ImageButton
            android:id="@+id/show_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gallery_icon"
            android:contentDescription="@string/desc_show_gallery" />
        
    </LinearLayout>

</RelativeLayout>
