<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="20dp" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal" >
	        
	        <ImageView 
		        android:id="@+id/derp_picture"
		        android:layout_width="320dp"
		        android:layout_height="320dp"
		        android:scaleType="fitXY"
		        android:background="@drawable/image_border"
		        android:contentDescription="@string/desc_derp_picture" />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_gravity="bottom"
	        	android:paddingTop="4dp"
	        	android:paddingBottom="4dp"
	        	android:layout_marginBottom="5dp"
	        	android:layout_marginLeft="5dp"
	        	android:layout_marginRight="5dp"
	        	android:orientation="horizontal"
	        	android:background="@drawable/transparent_gradient" >
	        	
	            <ImageView
	                android:id="@+id/btn_vote_down"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:src="@drawable/arrow_down"
	                android:contentDescription="@string/desc_vote_down" />
	            
	            <ImageView
	                android:id="@+id/btn_vote_up"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:src="@drawable/arrow_up"
	                android:contentDescription="@string/desc_vote_up" />
	        	
			</LinearLayout>
	    </FrameLayout>
	    
	    <TextView
	        android:id="@+id/caption"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center" />
	    
	
	</LinearLayout>
	
</ScrollView>
