<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="10dp"
	android:background="#f3f3f3" >
	
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:orientation="horizontal" >
    	
		<ImageView 
			android:id="@+id/team_owner_picture"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp" />
	        
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:orientation="vertical" >
			  	
			<LinearLayout
				android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal" >
			        
		        <com.walintukai.derpteam.CustomFontBoldTextView
					android:id="@+id/team_owner_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="26sp"
					android:textStyle="bold"
					android:textColor="#30acff" />
				 
				<com.walintukai.derpteam.CustomFontBoldTextView
				  	android:layout_width="wrap_content"
				  	android:layout_height="wrap_content"
				  	android:textSize="26sp"
				  	android:textStyle="bold"
				  	android:textColor="#30acff"
				  	android:text="@string/possessive_form" />
			        
		    </LinearLayout>
			  	
		    <com.walintukai.derpteam.CustomFontBoldTextView
			    android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:textSize="26sp"
			  	android:textStyle="bold"
			  	android:textColor="#30acff"
			  	android:text="@string/team" />
			    
		</LinearLayout>
		
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/stats_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical" >
        
        <com.walintukai.derpteam.CustomFontBoldTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:textStyle="bold"
			android:textColor="#30acff"
			android:text="@string/top_five_derps" />
        
    </LinearLayout>
            
</LinearLayout>
