<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_view_member"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp" >
	        
	        <ImageView 
		        android:id="@+id/fb_picture"
		        android:layout_width="40dp"
		        android:layout_height="40dp"
		        android:layout_alignParentLeft="true"
		        android:layout_marginRight="8dp"
		        android:scaleType="fitXY"
		        android:contentDescription="@string/desc_fb_picture"
		        android:src="@drawable/fb_pic_placeholder" />
	        
	        <TextView
	            android:id="@+id/fb_name"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentBottom="true"
	        	android:layout_toRightOf="@id/fb_picture"
	        	android:textSize="18sp" />
	        
	        <TextView
	            android:id="@+id/possessive_form"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentBottom="true"
	        	android:layout_toRightOf="@id/fb_name"
	        	android:textSize="18sp"
	        	android:text="@string/possessive_form" />
	        
	        <TextView 
	            android:id="@+id/title"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_marginLeft="4dp"
	        	android:layout_alignParentBottom="true"
	        	android:layout_toRightOf="@id/possessive_form"
	        	android:textSize="18sp" />
	        
	    </RelativeLayout>
	    
	    <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal" >
	        
	        <ImageView 
		        android:id="@+id/derp_picture"
		        android:layout_width="match_parent"
		        android:layout_height="360dp"
		        android:scaleType="fitXY"
		        android:contentDescription="@string/desc_derp_picture"
		        android:src="@drawable/image_placeholder" />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_gravity="bottom"
	        	android:paddingTop="4dp"
	        	android:paddingBottom="4dp"
	        	android:orientation="horizontal"
	        	android:background="@drawable/transparent_gradient" >
	        	
	            <ImageView
	                android:id="@+id/btn_vote_down"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:src="@drawable/arrow_down"
	                android:contentDescription="@string/desc_vote_down" />
	            
	            <ImageView
	                android:id="@+id/btn_vote_up"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:src="@drawable/arrow_up"
	                android:contentDescription="@string/desc_vote_up" />
	        	
			</LinearLayout>
	    </FrameLayout>
	    
	    <TextView
	        android:id="@+id/caption"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:layout_marginBottom="4dp"
	        android:gravity="center"
	        android:textAppearance="@style/caption" />
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp" >
	        
	        <!-- CONTAINER FOR UP/DOWN VOTE NUMBERS -->
	        <LinearLayout
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentLeft="true"
	        	android:orientation="horizontal" >
	            
	            <ImageView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
			 		android:src="@drawable/arrow_up_small"
			 		android:contentDescription="@string/desc_vote_up" />
		        
		        <TextView
		            android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginRight="10dp"
				    android:textColor="#00b200"
				    android:textSize="16sp"
				    android:textStyle="bold"
				    android:text="21" />
		        
		        <ImageView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
			 		android:src="@drawable/arrow_down_small"
			 		android:contentDescription="@string/desc_vote_down" />
		        
		        <TextView
		            android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginRight="10dp"
				    android:textColor="#cc0000"
				    android:textSize="16sp"
				    android:textStyle="bold"
				    android:text="43" />
	        </LinearLayout>
	        
	        <ImageButton
	            android:id="@+id/btn_add_comment"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:background="@drawable/add_comment" />
	        
	    </RelativeLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp" >
	        
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/comment_icon"
	            android:contentDescription="@string/desc_comment_icon" />
	        
	        <LinearLayout
	            android:id="@+id/comment_container"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="10dp" >
	            
	        </LinearLayout>
	        
	    </LinearLayout>
	
	</LinearLayout>
	
</ScrollView>
